# dogs_breed_det

./: .dockerignore  .gitignore  .stestr.conf  Jenkinsfile  LICENSE  README.md  _Jenkinsfile  debug_log.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sysinfo.sh  sysinfo_log.sh  test-requirements.txt  topology-orchent-dogs_breed-cpu.yml  topology-orchent-dogs_breed-gpu.yml  topology.yml  tox.ini
data/: .gitignore
docker/: Dockerfile.dev  Dockerfile.test  Dockerfile.tests
docker/jupyter/: jupyter_notebook_config.py  run_jupyter.sh
docs/: Makefile  conf.py  index.rst  make.bat
dogs_breed_det/: __init__.py  config.py  run_info.py  sys_info.py
dogs_breed_det/dataset/: data_utils.py  make_dataset.py
dogs_breed_det/features/: build_features.py
dogs_breed_det/models/: build_model.py  deep_api.py  general_net.py  inceptionV3.py  model.py  model_utils.py  predict_model.py  resnet50.py  train_model.py  vgg16.py  vgg19.py  xception.py
dogs_breed_det/tests/: test_func_model.py  test_unit_dataset.py  test_unit_model.py
dogs_breed_det/tests/inputs/: dog_names.txt
models/: weights.best.Resnet50.hdf5
notebooks/: 1.0-dogs_breed_det_start.py2.ipynb
