[metadata]
name = dogs_breed_det
summary = DEEP as a Service (DEEPaaS) is a REST API to expose a machine learning model through a REST API.
description-file =
    README.md
author = Valentin Kozlov
author-email = valentin.kozlov@gmail.com
version=0.2.0
license = MIT
home-page = http://github.com/vykozlov/dogs_breed_det
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    dogs_breed_det

[entry_points]

deepaas.model = 
    Dogs_Resnet50=dogs_breed_det.models.resnet50
    Dogs_VGG16=dogs_breed_det.models.vgg16
    Dogs_VGG19=dogs_breed_det.models.vgg19
    Dogs_InceptionV3=dogs_breed_det.models.inceptionV3
