# -*- coding: utf-8 -*-
[metadata]
name = dogs_breed_det
summary = Dogs breed detector as example for DEEPaaS API
description-file = README.md
author = V.Kozlov (KIT)
author-email = valentin.kozlov@kit.edu
license = MIT
home-page = http://github.com/vykozlov/dogs_breed_det
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    dogs_breed_det

[entry_points]

deepaas.model = 
    Dogs_Resnet50=dogs_breed_det.models.resnet50
    Dogs_VGG16=dogs_breed_det.models.vgg16
    Dogs_VGG19=dogs_breed_det.models.vgg19
    Dogs_InceptionV3=dogs_breed_det.models.inceptionV3
