# -*- coding: utf-8 -*-
[metadata]
name = dogs_breed_det
summary = Dogs breed detector based on deep learning
version = 1.0.0
description-file = README.md
author = V.Kozlov (KIT)
author_email = valentin.kozlov@kit.edu
license = MIT
home-page = http://github.com/deephdc/dogs_breed_det
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    dogs_breed_det

[entry_points]

deepaas.model = 
    Dogs_Breed=dogs_breed_det.models.model

